--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-challenge",
+  "name": "mui-data-grid",
   "homepage": "https://github.com/Dcoke1/mui-data-grid.git",
   "version": "0.0.1",
   "dependencies": {
